app/styles/main.css
.print .no-print {
  display: none;
}

.sticky-div {
  top: 25px !important;
}

/* @media print {
  * {
    -webkit-transition: none !important;
    transition: none !important;
  }
} */

body {
  font-size: 20px;
}

table tr {
  margin: 0 !important;
  padding: 0 !important;
}

td.radnici {
  padding: 0;
  height: 1px;
}

td.radnici ul {
    list-style-type: none;
    /* border: 1px solid #00f; */
    margin: 0;
    padding-left: 5px;
    min-width: 50px;
    min-height: 20px;
    z-index: 2;
    height: 100%;
}

.radnici tr {
  line-height: 38px;
}

table.radnici td {
  border: 2px solid black;
}

.border-right-emphasized {
  border-right: 5px solid black !important;
}

.border-nedelja {
  border-top: 5px solid black;
  border-bottom: 5px solid black;
}

td.disabled {
  background-color: #ffcaca !important;
}

td.disabled > ul{
  background-color: inherit !important;
}

td.placeholder > ul {
  /* background-color: #FFE5A9; */
}

.raspored-header {
  text-align: center;
}

.raspored-header.kuvarice {
  background-color: lightcoral;
}

.raspored-header.konobari {
  background-color: lightblue;
}

.font-big .badge {
  font-size: 20px;
}

.cell-error {
  background-color: red !important;
}

.radnici-list {
  /* text-align: center; */
  margin-top: -18px;
}

.radnici-list > li {
  /* text-align: center; */
  padding-top: 13px;
  margin-top: 5px;
  padding-left: 22%;
  border-radius: 17px;
}

span.radnik-name {
  font-size: 20px;
  width: 130px;
  cursor: pointer;
}

.selected-radnik {
  background-color: lightgray !important;
}

.editing-radnik {
  background-color: #ffd251 !important;
}

.trashcan {
  margin-top:18px;
  width: 100%;
  height: 350px;
  /* background-color: #f1f1f1; */
  list-style: none;
  border-radius: 30px;
}

.trashcan.dndDragover {
  background-color: #f2baba !important;
}

.bg-red {
  background-color: red;
}

.bg-green {
  background-color: #07ff07;
}

.print-show {
  background-color: #ffffa6 !important;
}

.bg-light-red {
  background-color: #ffd7d7 !important;
}

/* CUSTOM DATEPICKER */
.btn.active {
  font-weight: bold !important;
}

.picker-day.picker-selected.slobodan-dan {
    background-color: #d9534f !important;
    color: #fff;
}

td.disabled-slobodan-dan {
  background-color: #d9534f63 !important;
}

.picker-day.picker-selected.godisnji-odmor {
    background-color: #f0ad4e !important;
    color: #fff;
}

td.disabled-godisnji-odmor {
  background-color: #f0ad4e8c !important;
}

.picker-day.picker-selected.bolovanje {
    background-color: #31b0d5 !important;
    color: #fff;
}

td.disabled-bolovanje {
  background-color: #31b0d533 !important;
}

.picker-day:hover{
    cursor: pointer;
    background-color: #FFFD96 !important;
    color: black !important;
}

@media print {
  .col-lg-6 {
    width: 50%;
    float: left;
    position: relative;
    min-height: 1px;
    padding-right: 15px;
    padding-left: 0;
  }

  .print-ignore {
    display: none;
  }

  .print table {
     width: 100% !important;
     font-weight: normal !important;
     font-size: 14px !important;
 }

 #raspored-body * {
   display: none !important;
 }

 .print span.radnik-name {
   width: 60px !important;
   /* display: inline-block; */
   /* color: red !important; */
 }

 .print table td ul li p {
    margin: 0 !important;
    padding: 0 !important;
  }

  .print ul {
     list-style-type: none !important;
   }

  .print ul > li {
    padding-left: 0;
    padding-top: 0;
    font-weight: normal !important;
  }

  .print table td {
     line-height: 14px !important;
     border: 1px solid grey;
   }

 .print table span {
    font-weight: normal !important;
    font-size: 14px !important;
    display: inline;
  }

  .print ul.radnici-list li {
    display: inline !important;
  }

  .print .radnici-list li {
    padding-bottom: 0 !important;
  }

  .print .radnici-list li > p {
    margin-bottom: 0 !important;
    font-size: 12px !important;
  }

  .print .border-right-emphasized {
    border-right: 2px solid black !important;
  }

  .print .border-bottom-emphasized {
    border-bottom: 2px solid black !important;
  }

  .print .raspored-dan {
    min-width: 70px !important;
  }

  /* .print table span.vreme {
     font-weight: normal !important;
     font-size: 14px !important;
   } */
}


/* ul {
  min-height: 10px;
} */


.browsehappy {
  margin: 0.2em 0;
  background: #ccc;
  color: #000;
  padding: 0.2em 0;
}

body {
  padding: 0;
}

/* Everything but the jumbotron gets side spacing for mobile first views */
.header,
.marketing,
.footer {
  padding-left: 15px;
  padding-right: 15px;
}

/* Custom page header */
.header {
  border-bottom: 1px solid #e5e5e5;
  margin-bottom: 10px;
}
/* Make the masthead heading the same height as the navigation */
.header h3 {
  margin-top: 0;
  margin-bottom: 0;
  line-height: 40px;
  padding-bottom: 19px;
}

/* Custom page footer */
.footer {
  padding-top: 19px;
  color: #777;
  border-top: 1px solid #e5e5e5;
}

.container-narrow > hr {
  margin: 30px 0;
}

/* Main marketing message and sign up button */
.jumbotron {
  text-align: center;
  border-bottom: 1px solid #e5e5e5;
}
.jumbotron .btn {
  font-size: 21px;
  padding: 14px 24px;
}

/* Supporting marketing content */
.marketing {
  margin: 40px 0;
}
.marketing p + h4 {
  margin-top: 28px;
}

/* Responsive: Portrait tablets and up */
@media screen and (min-width: 768px) {
  .container {
    max-width: 730px;
  }

  /* Remove the padding we set earlier */
  .header,
  .marketing,
  .footer {
    padding-left: 0;
    padding-right: 0;
  }
  /* Space out the masthead */
  .header {
    margin-bottom: 30px;
  }
  /* Remove the bottom border on the jumbotron for visual effect */
  .jumbotron {
    border-bottom: 0;
  }
}

